<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.detail.DetailActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/track_image"
                android:layout_width="0dp"
                android:layout_height="@dimen/track_cover_height"
                android:contentDescription="@string/track_image"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/madonna_isla_bonita" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <TextView
                android:id="@+id/track_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_dimension"
                android:text="@string/la_isla_bonita"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="24sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/track_image" />

            <TextView
                android:id="@+id/track_artist"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_dimension"
                android:text="@string/madonna"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/track_name" />

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_dimension"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/track_artist" />

            <ImageView
                android:id="@+id/rewind_track"
                android:layout_width="@dimen/button_dimension"
                android:layout_height="@dimen/button_dimension"
                android:layout_marginTop="@dimen/medium_dimension"
                android:contentDescription="@string/back_button"
                app:layout_constraintEnd_toStartOf="@+id/play_track"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/seekBar"
                app:srcCompat="@drawable/ic_fast_rewind_black_24dp" />

            <ImageView
                android:id="@+id/play_track"
                android:layout_width="@dimen/button_dimension"
                android:layout_height="@dimen/button_dimension"
                android:layout_marginTop="@dimen/medium_dimension"
                android:layout_marginBottom="32dp"
                android:contentDescription="@string/play_or_pause_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/skip_track"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/rewind_track"
                app:layout_constraintTop_toBottomOf="@+id/seekBar"
                app:srcCompat="@drawable/ic_play_arrow_black_24dp" />

            <ImageView
                android:id="@+id/skip_track"
                android:layout_width="@dimen/button_dimension"
                android:layout_height="@dimen/button_dimension"
                android:layout_marginTop="@dimen/medium_dimension"
                android:contentDescription="@string/forward_button"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/play_track"
                app:layout_constraintTop_toBottomOf="@+id/seekBar"
                app:srcCompat="@drawable/ic_fast_forward_black_24dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>